feat: add scaledobject listing and request deletion
